fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -83,7 +83,7 @@ nav {
     background-position: 50%;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -92,7 +92,7 @@ nav {
     position: absolute;
     top: 0;
     height: 100%;
-    width: 93%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -334,7 +334,7 @@ nav {
     color: black;
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 600px){
 
     body {
         overflow-x: hidden; 
